Revert "DTSCCI-340 case note null check (#4820)"
This reverts commit 7b9562534fd209cfe48ed7028951b761f8ba0bc7.