@@ -822,18 +822,16 @@ public class EventHistoryMapper {
                          .dateReceived(caseNote.getCreatedOn())
                          .eventDetailsText(left((format(
                              "case note added: %s",
-                             caseNote.getNote() != null
-                                 ? caseNote.getNote().replaceAll("\\s+", " ") : ""
+                             caseNote.getNote().replaceAll("\\s+", " ")
                          )), 250))
                          .eventDetails(EventDetails.builder()
                                            .miscText(left((format(
                                                "case note added: %s",
-                                               caseNote.getNote() != null
-                                                   ? caseNote.getNote().replaceAll("\\s+", " ") : ""
+                                               caseNote.getNote().replaceAll("\\s+", " ")
                                            )), 250))
                                            .build())
                          .build())
-            .toList();
+            .collect(Collectors.toList());
         builder.miscellaneous(events);
     }
 
